@startuml
class com.example.User_Managment.EmployeeManagmentApplication {
+ {static} void main(String[])
}
class com.example.User_Managment.RestExceptionHandler {
- Logger logger
# ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException,HttpHeaders,HttpStatus,WebRequest)
# ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException,HttpHeaders,HttpStatus,WebRequest)
+ ResponseEntity<Object> handleEntityNotFoundException(EntityNotFoundException)
+ ResponseEntity<Object> handleExpiredJwtException(ExpiredJwtException)
- ResponseEntity<Object> buildResponseEntity(ResponeObject)
}
class com.example.User_Managment.User.controller.UserController {
~ EmployeeService services
~ Token token
+ ResponseEntity<?> getEmployee(Long,String)
+ ResponseEntity<?> addEmployee(Employee,String)
+ ResponseEntity<?> updateEmployee(Employee,String)
+ ResponseEntity<?> removeEmployee(Employee.EmployeeID,String)
}
class com.example.User_Managment.response_handler.Error {
- String message
- String cause
- int status
+ <<Create>> Error(String,String,int)
+ <<Create>> Error(int)
}
class com.example.User_Managment.services.TokenService {
- TokenRepository tokenRepository
- EmployeeRepository employeeRepository
- {static} String JWT_SECRET_KEY
+ Token store(String)
}
interface com.example.User_Managment.User.repositories.UserRepository {
~ Employee findByUsernameAndPassword(String,String)
~ Employee findByUsername(String)
}
class com.example.User_Managment.response_handler.ResponeObject {
- String message
- Error error
+ <<Create>> ResponeObject(String,Error)
+ <<Create>> ResponeObject(String)
}
class com.example.User_Managment.EmployeeManagmentApplicationTests {
~ void contextLoads()
}
interface com.example.User_Managment.repositories.PasswordRepository {
}
class com.example.User_Managment.User.models.User {
- Long employee_id
- String name
- String username
- String password
- int age
- String position
- double salary
- PasswordInfo password_info
- Token token_info
+ <<Create>> Employee()
}
class com.example.User_Managment.User.models.User.EmployeeID {
- Long id
}
class com.example.User_Managment.User.models.User.PasswordUpdate {
- Long id
- String newPassword
}
interface com.example.User_Managment.Authenticate.repositories.TokenRepository {
~ Token findByUserId(Long)
}
class com.example.User_Managment.Login.controller.LoginController {
- LoginService loginService
- TokenService tokenService
- Token token
+ ResponseEntity<?> login(LoginRequest)
}
class com.example.User_Managment.dto.UserDTO {
- Long id
- String name
- int age
- String position
- double salary
+ <<Create>> EmployeeDTO(Long,String,int,String,double)
}
class com.example.User_Managment.jwtUtils.JwtTokenProvider {
- {static} String JWT_SECRET_KEY
+ String generateToken(Employee)
+ boolean validateToken(String)
+ Long getUserIdFromToken(String)
}
class com.example.User_Managment.payload.LoginResponse {
- String message
- String accessToken
+ <<Create>> LoginResponse(String,String)
}
class com.example.User_Managment.User.services.UserService {
- EmployeeRepository employeeRepository
- PasswordRepository passwordRepository
- JwtTokenProvider jtp
- TokenService tokenService
- Logger logger
- List<Employee> list
+ List<EmployeeDTO> getAll()
+ EmployeeDTO getEmployee(Long)
+ ResponeObject addEmployee(Employee)
+ ResponeObject updateEmployee(Long,Employee)
+ ResponeObject updatePassword(Long,String)
+ ResponeObject deleteEmployee(Long)
- PasswordInfo createPassword(Employee)
- PasswordInfo getPasswordInfoByEmployId(Employee)
}
class com.example.User_Managment.models.Token {
- Long id
- String token
- Date created_date
- Date expired_date
- Employee employee
+ <<Create>> Token()
+ <<Create>> Token(String,Date,Date,Employee)
}
class com.example.User_Managment.Login.services.LoginService {
~ EmployeeRepository employeeRepository
+ Employee check(String,String)
}
class com.example.User_Managment.payload.LoginRequest {
- String username
- String password
}
class com.example.User_Managment.models.PasswordInfo {
- Long pasword_id
- String password
- Date create_date
- Date expired_date
- Date update_date
- Employee employee
}


org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler <|-- com.example.User_Managment.RestExceptionHandler
org.springframework.data.jpa.repository.JpaRepository <|-- com.example.User_Managment.User.repositories.UserRepository
org.springframework.data.jpa.repository.JpaRepository <|-- com.example.User_Managment.repositories.PasswordRepository
com.example.User_Managment.User.models.User +.. com.example.User_Managment.User.models.User.EmployeeID
com.example.User_Managment.User.models.User +.. com.example.User_Managment.User.models.User.PasswordUpdate
org.springframework.data.jpa.repository.JpaRepository <|-- com.example.User_Managment.Authenticate.repositories.TokenRepository
com.example.User_Managment.jwtUtils.JwtTokenProvider <|-- com.example.User_Managment.models.Token
@enduml